# t-rust

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  install.sh  setup.py
examples/: bench_config.json  benchmark_result.csv
examples/block_validation/src/: lib.rs
examples/sha2/: Cargo.toml
examples/sha2/src/: lib.rs
examples/sha3/: Cargo.toml
examples/sha3/src/: lib.rs
examples/utils/fetch_block/: Cargo.toml  README.md
examples/utils/fetch_block/src/: main.rs
sdk/: cli.py
sdk/args/: Cargo.toml
sdk/args/src/: lib.rs
sdk/benchmark_tests/sha2/: risc0_benchmark.py
sdk/benchmark_tests/sha3/: sp1_benchmark.py
sdk/examples/: README.md  benchmark_result.csv  run_benchmark.py
sdk/examples/eth_block_validation/block_validation/: Cargo.toml
sdk/examples/fibonacci/: Cargo.toml
sdk/examples/fibonacci/src/: lib.rs
sdk/examples/sha2/: output.txt
sdk/examples/sha3/: jolt_benchmark.py  output.txt
sdk/module/: __init__.py  docker_mgmt.py
sdk/module/backends/jolt/: __init__.py
sdk/module/backends/jolt/docker/: Dockerfile  run.sh
sdk/module/backends/jolt/res/: Cargo.toml
sdk/module/backends/jolt/res/guest/: Cargo.toml
sdk/module/backends/jolt/res/guest/src/: lib.rs
sdk/module/backends/jolt/res/src/: main.rs
sdk/module/backends/local/: __init__.py
sdk/module/backends/local/docker/: Dockerfile  run.sh
sdk/module/backends/local/res/: Cargo.toml
sdk/module/backends/local/res/src/: main.rs
sdk/module/backends/risc0/: __init__.py
sdk/module/backends/risc0/docker/: Dockerfile  run.sh
sdk/module/backends/risc0/res/runner/host/: Cargo.toml
sdk/module/backends/risc0/res/runner/host/src/: main.rs
sdk/module/backends/risc0/res/runner/methods/guest/: Cargo.toml
sdk/module/backends/risc0/res/runner/methods/guest/src/: main.rs
sdk/module/backends/sp1/: __init__.py
sdk/module/backends/sp1/docker/: Dockerfile  run.sh
sdk/module/backends/sp1/res/builder/: Cargo.toml
sdk/module/backends/sp1/res/builder/src/: main.rs
sdk/module/backends/sp1/res/runner/: Cargo.toml
sdk/t-rust/: .gitignore  Cargo.toml
sdk/t-rust/src/: lib.rs
sdk/t-rust/src/backends/: jolt.rs  local.rs  risc0.rs  sp1.rs
sdk/userscrate/: Cargo.toml  README.md
