[package]
name = "t-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "1.3.3", optional = true }
serde = { version = "1.0.206", optional = true }
serde_derive = { version = "1.0.206", optional = true }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v2.0.0", optional = true }
risc0-zkvm = { version = "1.2.0", optional = true }

[features]
default = [] 
local = ["bincode", "serde", "serde_derive"]
sp1 = ["dep:sp1-zkvm", "serde", "serde_derive"]
risc0 = ["dep:risc0-zkvm", "serde", "serde_derive"]
jolt = []
