[package]
version = "0.1.0"
name = "sp1-program"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.2"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v2.0.0" }
t-rust = { path = "../../../../../t-rust/", features = ["sp1"] }
userscrate = { path = "../../../../../userscrate" }
