[package]
version = "0.1.0"
name = "sp1-script"
edition = "2021"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
args = { path = "../../../../../args/" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v2.0.0", features = ["native-gnark"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
hex = "0.4.3"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v2.0.0" }
