[package]
version = "0.1.0"
name = "sp1-script"
edition = "2021"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
anyhow = "1.0"
args = { path = "../../../../../args/" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sp1-sdk = "4.1.1"
hex = "0.4.3"

[build-dependencies]
sp1-build = "4.1.0"
